# backend/config/routes.js
@@ -4,4 +4,5 @@ module.exports = app => {
 
     app.route('/api/dadoscadastrais')
         .get(app.api.dadoscadastrais.get)
+        .put(app.api.dadoscadastrais.save)
 }
